# imageProccessing

./: readme.md
Matlab/: Readme.md  deneme.m  imageWriteRead.m  myFilter.m  myFurier.m  myHistogram.m  myPeopleDetector.m  tryingSpace.m
OpenCV/colorDetect/: colorDecet.cpp  readme.md
OpenCV/colorDetectCuda/: CMakeLists.txt  README.md
OpenCV/colorDetectCuda/src/: main.cu
